test/langtools/tools/javac/superInit/SuperInitBad01.out
SuperInitBad01.java:21:13: compiler.err.recursive.ctor.invocation
1 error
